Fixed: BackendObserver Java 21 desugaring crash + drawer touch interception
- Replace addLast/removeFirst/getFirst with add/remove(0)/get(0) to avoid
  Android desugaring intercepting LinkedList methods as List (Java 21) API
- Remove descendantFocusability="blocksDescendants" from drawer so child
  views can receive click events

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>